modified:   .gitignore 	modified:   notebooks/01-AMASS_Visualization.ipynb 	modified:   notebooks/02-AMASS_DNN.ipynb 	modified:   notebooks/03-AMASS_Visualization_Advanced.ipynb 	modified:   notebooks/04-AMASS_DMPL.ipynb 	modified:   requirements.txt 	new file:   support_data/body_models/smpl/female/model.npz 	new file:   support_data/body_models/smpl/male/model.npz 	new file:   support_data/body_models/smpl/neutral/model.npz 	new file:   third_party/body_visualizer/.gitignore 	new file:   third_party/body_visualizer/LICENSE 	new file:   third_party/body_visualizer/MANIFEST.in 	new file:   third_party/body_visualizer/README.md 	new file:   third_party/body_visualizer/requirements.txt 	new file:   third_party/body_visualizer/setup.py 	new file:   third_party/body_visualizer/src/__init__.py 	new file:   third_party/body_visualizer/src/body_visualizer/__init__.py 	new file:   third_party/body_visualizer/src/body_visualizer/mesh/__init__.py 	new file:   third_party/body_visualizer/src/body_visualizer/mesh/cube.py 	new file:   third_party/body_visualizer/src/body_visualizer/mesh/mesh_viewer.py 	new file:   third_party/body_visualizer/src/body_visualizer/mesh/psbody_mesh_cube.py 	new file:   third_party/body_visualizer/src/body_visualizer/mesh/psbody_mesh_sphere.py 	new file:   third_party/body_visualizer/src/body_visualizer/mesh/sphere.py 	new file:   third_party/body_visualizer/src/body_visualizer/tools/__init__.py 	new file:   third_party/body_visualizer/src/body_visualizer/tools/mesh_tools.py 	new file:   third_party/body_visualizer/src/body_visualizer/tools/notebook_tools.py 	new file:   third_party/body_visualizer/src/body_visualizer/tools/render_tools.py 	new file:   third_party/body_visualizer/src/body_visualizer/tools/vis_tools.py 	new file:   third_party/body_visualizer/support_data/vposer_samples.png 	new file:   third_party/human_body_prior/.gitignore 	new file:   third_party/human_body_prior/LICENSE 	new file:   third_party/human_body_prior/MANIFEST.in 	new f

--- a/notebooks/04-AMASS_DMPL.ipynb
+++ b/notebooks/04-AMASS_DMPL.ipynb
@@ -20,24 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Preparing the environment\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "%matplotlib notebook\n",
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -56,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -86,23 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": true,
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data keys available:['trans', 'gender', 'mocap_framerate', 'betas', 'dmpls', 'poses']\n",
-      "The subject of the mocap sequence is  female.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "amass_npz_fname = osp.join(support_dir, 'github_data/dmpl_sample.npz') # the path to body data\n",
     "bdata = np.load(amass_npz_fname)\n",
@@ -118,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -153,28 +127,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Body parameter vector shapes: \n",
-      "root_orient: torch.Size([235, 3]) \n",
-      "pose_body: torch.Size([235, 63]) \n",
-      "pose_hand: torch.Size([235, 90]) \n",
-      "trans: torch.Size([235, 3]) \n",
-      "betas: torch.Size([235, 16]) \n",
-      "dmpls: torch.Size([235, 8])\n",
-      "time_length = 235\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "time_length = len(bdata['trans'])\n",
     "\n",
@@ -205,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -246,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -278,10 +237,9 @@
     "        image_arr.append(body_image)\n",
     "\n",
     "    image_arr = np.array(image_arr).reshape([1,1,-1, 1600, 1600, 3])\n",
-    "    imagearray2file(image_arr, out_fname='dmpl_sample.gif', fps=60)\n",
-    "    imagearray2file(image_arr, out_fname='dmpl_sample.mp4', fps=60)\n",
+    "    imagearray2file(image_arr, outpath='./dmpl_sample.gif', fps=60)\n",
+    "    imagearray2file(image_arr, outpath='./dmpl_sample.mp4', fps=60)\n",
     "\n",
-    "    \n",
     "vis_dmpl_comparision()"
    ]
   },
@@ -295,7 +253,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "amass",
    "language": "python",
    "name": "python3"
   },
@@ -309,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
